--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/butecovirtual/server#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "moment-timezone": "^0.5.28",
     "restify": "^8.5.1",
     "twilio": "^3.42.2"
