--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
   },
   "homepage": "https://github.com/butecovirtual/server#readme",
   "dependencies": {
+    "ajv": "^6.12.2",
+    "ajv-errors": "^1.0.1",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.28",
+    "mongoose": "^5.9.10",
+    "randomstring": "^1.1.5",
     "restify": "^8.5.1",
-    "twilio": "^3.42.2"
+    "restify-errors": "^8.0.2",
+    "restify-jwt-community": "^1.1.3",
+    "twilio": "^3.43.0"
   }
 }
