--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ajv-errors": "^1.0.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.10",
     "node-media-server": "^2.1.8",
@@ -29,6 +30,7 @@
     "restify": "^8.5.1",
     "restify-errors": "^8.0.2",
     "restify-jwt-community": "^1.1.3",
+    "socket.io": "^2.3.0",
     "twilio": "^3.43.0"
   }
 }
